--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,3 +7,9 @@ $mobile-width-only: 767px;
 /* Color */
 $basic-black: #000000;
 $basic-white: #ffffff;
+$basic-blue: #f2f8fb;
+$basic-green: #008272;
+
+// Padding
+
+$padding: 15px;
