--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -13,9 +13,11 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", "Tahoma", sans-serif;
+  font-family: "Manrope", "Tahoma", sans-serif;
+  font-size: 14px;
   font-style: normal;
   font-weight: normal;
+  line-height: 1.3;
   color: $basic-black;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
