--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,6 @@
 @import "global/global.scss";
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
+@import "blocks/header.scss";
+@import "blocks/footer.scss";
+@import "blocks/copyright.scss";
