стилизовал блок top

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,7 +3,6 @@
   align-items: center;
   justify-content: space-between;
   min-height: 64px;
-  padding-left: 15px;
-  padding-right: 15px;
+  @include container;
   background-color: $basic-blue;
 }
