--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,7 +9,12 @@ $basic-black: #000000;
 $basic-white: #ffffff;
 $basic-blue: #f2f8fb;
 $basic-green: #008272;
+$basic-orange: #fdf4e6;
 
 // Padding
 
 $padding: 15px;
+
+// Fonts
+
+$font: "Manrope", "Tahoma", sans-serif;
