--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   min-height: 64px;
-  padding-left: 15px;
-  padding-right: 15px;
+  @include container;
   background-color: $basic-blue;
 }
