--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -13,7 +13,7 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Manrope", "Tahoma", sans-serif;
+  font-family: $font;
   font-size: 14px;
   font-style: normal;
   font-weight: normal;
