--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,5 +7,10 @@
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/header.scss";
+@import "blocks/main.scss";
+@import "blocks/top.scss";
+@import "blocks/filters.scss";
+@import "blocks/add-items.scss";
+@import "blocks/button.scss";
 @import "blocks/footer.scss";
 @import "blocks/copyright.scss";
