--- a/source/sass/blocks/filters.scss
+++ b/source/sass/blocks/filters.scss
@@ -13,9 +13,9 @@
   border-radius: 0;
   border-bottom: 1px solid $basic-black;
   background: none;
-  background-image: url("../../img/common/icon-select.svg");
+  background-image: url("data:image/svg+xml,%3Csvg fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 8'%3E%3Cpath d='M1 1c7 8 7 8 14 0' stroke='%23000'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
-  background-size: 14px 6px;
+  background-size: 16px 8px;
   background-position-x: 96%;
   background-position-y: 50%;
   appearance: none;
