--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -11,6 +11,8 @@ $basic-blue: #f2f8fb;
 $basic-green: #008272;
 $basic-orange: #fdf4e6;
 
+$card-shadow: rgba(0, 0, 0, 0.09);
+
 // Padding
 
 $padding: 15px;
