--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,13 +1,14 @@
 .button {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   padding-top: 14px;
   padding-bottom: 14px;
   padding-right: 18px;
   padding-left: 18px;
   font-family: $font;
-  font-size: 13px;
+  font-size: 14px;
   background-color: $basic-orange;
   border: none;
   border-radius: 10px;
