--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "global/variables.scss";
 @import "global/mixin.scss";
 @import "global/global.scss";
+@import "blocks/button.scss";
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/header.scss";
@@ -11,6 +12,6 @@
 @import "blocks/top.scss";
 @import "blocks/filters.scss";
 @import "blocks/add-items.scss";
-@import "blocks/button.scss";
+@import "blocks/checklist.scss";
 @import "blocks/footer.scss";
 @import "blocks/copyright.scss";
