--- a/source/sass/blocks/checklist.scss
+++ b/source/sass/blocks/checklist.scss
@@ -66,6 +66,8 @@
   }
 
   &--delete {
+    width: 15px;
+    height: 16px;
     background-image: url("data:image/svg+xml,%3Csvg fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 13'%3E%3Cpath d='M11.5 2.25h-2V1a1 1 0 00-1-1h-5a1 1 0 00-1 1v1.25h-2a.5.5 0 00-.5.5v.5c0 .069.056.125.125.125h.944l.386 8.172a1 1 0 00.998.953h7.094a.999.999 0 00.998-.953l.386-8.172h.944A.125.125 0 0012 3.25v-.5a.5.5 0 00-.5-.5zm-3.125 0h-4.75V1.125h4.75V2.25z' fill='%23000'/%3E%3C/svg%3E");
   }
 
@@ -78,6 +80,12 @@
   display: grid;
   grid-template-columns: 20px 1fr;
   column-gap: 11px;
+  max-width: 89%;
+
+  &--edit {
+    grid-template-columns: 1fr;
+    height: 100%;
+  }
 }
 
 .checklist__check-box {
@@ -88,10 +96,6 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-}
-
-.checklist__name {
-  max-width: 89%;
 }
 
 .checklist__checkbox {
@@ -120,4 +124,14 @@
   &--showed {
     transform: rotate(180deg);
   }
+}
+
+.checklist__edit {
+  width: 100%;
+  height: 100%;
+  font-family: inherit;
+  background-color: $basic-orange;
+  border: 1px solid $basic-black;
+  border-radius: 6px;
+  resize: none;
 }
