--- a/source/sass/blocks/add-items.scss
+++ b/source/sass/blocks/add-items.scss
@@ -3,10 +3,15 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
   row-gap: 20px;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: repeat(4, minmax(169px, 1fr));
+  }
 }
 
 .add-items__input-box {
   display: none;
+  grid-template-columns: 1fr min-content;
   align-items: center;
   margin-top: 10px;
   padding-top: 7px;
@@ -15,7 +20,7 @@
   border-bottom: 1px solid $basic-black;
 
   &--showed {
-    display: flex;
+    display: grid;
   }
 }
 
@@ -31,6 +36,7 @@
 }
 
 .add-items__input {
+  width: 100%;
   padding-left: 0;
   padding-right: 10px;
   font-family: $font;
