--- a/source/sass/blocks/checklist.scss
+++ b/source/sass/blocks/checklist.scss
@@ -4,6 +4,10 @@
   margin-bottom: 13px;
   font-weight: 400;
   font-size: 18px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 23px;
+  }
 }
 
 .checklist__list {
@@ -11,8 +15,16 @@
 
   display: grid;
   row-gap: 19px;
+
   &:not(:last-child) {
     margin-bottom: 20px;
+  }
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: repeat(auto-fill, minmax(359px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    column-gap: 20px;
+    row-gap: 22px;
   }
 }
 
@@ -21,7 +33,11 @@
   display: flex;
   flex-direction: column;
   min-height: 100px;
-  max-height: 100px;
+}
+
+.checklist__inner {
+  width: 100%;
+  height: 100%;
   padding-top: 10px;
   padding-left: 10px;
   padding-bottom: 10px;
@@ -36,7 +52,12 @@
   }
 
   &--showed {
+    position: absolute;
+    height: fit-content;
+    min-height: 100px;
     max-height: 1000px;
+    box-shadow: 0 2px 9px $card-shadow-edit;
+    z-index: 1;
   }
 }
 
