--- a/source/sass/blocks/filters.scss
+++ b/source/sass/blocks/filters.scss
@@ -3,11 +3,17 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
   row-gap: 22px;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 20px;
+  }
 }
 
 .filters__input {
   width: 100%;
   height: 23px;
+  font-size: 14px;
   font-family: $font;
   border: 0;
   border-radius: 0;
@@ -19,4 +25,8 @@
   background-position-x: 96%;
   background-position-y: 50%;
   appearance: none;
+
+  @media (min-width: $tablet-width) {
+    font-size: 13px;
+  }
 }
