--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,8 +1,24 @@
 .header {
+  @include container;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
   min-height: 64px;
-  @include container;
   background-color: $basic-blue;
+
+  @media (min-width: $tablet-width) {
+    min-height: 80px;
+  }
+}
+
+.header__auth {
+  display: flex;
+}
+
+.header__auth-icon {
+  @media (min-width: $tablet-width) {
+    width: 32.5px;
+    height: 32.5px;
+  }
 }
