--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -2,8 +2,16 @@
   @include container;
   padding-top: 22px;
   padding-bottom: 22px;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 60px;
+  }
 }
 
 .main__top {
   margin-bottom: 24px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 17px;
+  }
 }
