--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -12,6 +12,7 @@ $basic-green: #008272;
 $basic-orange: #fdf4e6;
 
 $card-shadow: rgba(0, 0, 0, 0.09);
+$card-shadow-edit: rgba(0, 0, 0, 0.5);
 
 // Padding
 
