--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/header.scss";
+@import "blocks/logo.scss";
 @import "blocks/main.scss";
 @import "blocks/top.scss";
 @import "blocks/filters.scss";
