--- a/source/sass/blocks/checklist.scss
+++ b/source/sass/blocks/checklist.scss
@@ -8,6 +8,10 @@
   @media (min-width: $tablet-width) {
     margin-bottom: 23px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 20px;
+  }
 }
 
 .checklist__list {
@@ -25,6 +29,14 @@
     grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
     column-gap: 20px;
     row-gap: 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    column-gap: 30px;
+
+    &:not(:last-child) {
+      margin-bottom: 39px;
+    }
   }
 }
 
