--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,6 +1,7 @@
 .copyright {
   display: grid;
   grid-template-rows: repeat(2, auto);
+  width: 100%;
 
   @media (min-width: $desktop-width) {
     display: flex;
