--- a/source/sass/blocks/filters.scss
+++ b/source/sass/blocks/filters.scss
@@ -8,6 +8,11 @@
     grid-template-columns: repeat(4, 1fr);
     row-gap: 20px;
   }
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: repeat(3, minmax(165px, 1fr));
+    column-gap: 30px;
+  }
 }
 
 .filters__input {
