--- a/source/sass/blocks/top.scss
+++ b/source/sass/blocks/top.scss
@@ -1,3 +1,11 @@
+.top {
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 30px;
+  }
+}
+
 .top__filters {
   margin-bottom: 14px;
 }
