--- a/source/sass/global/mixin.scss
+++ b/source/sass/global/mixin.scss
@@ -22,6 +22,13 @@
     left: $padding;
     right: $padding;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: {
+      left: $padding-desktop;
+      right: $padding-desktop;
+    }
+  }
 }
 
 @mixin clear-margin($mt: 0, $mb: 0) {
