--- a/source/sass/blocks/checklist.scss
+++ b/source/sass/blocks/checklist.scss
@@ -89,6 +89,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+  cursor: pointer;
 
   &:not(:last-child) {
     margin-right: 6px;
@@ -152,6 +153,7 @@
   background-size: contain;
   background-position: center;
   border: none;
+  cursor: pointer;
   transition: all 0.5s ease-in-out;
 
   &--showed {
