--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "global/variables.scss";
 @import "global/mixin.scss";
 @import "global/global.scss";
+@import "blocks/body.scss";
 @import "blocks/button.scss";
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
