--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,5 +15,6 @@
 @import "blocks/filters.scss";
 @import "blocks/add-items.scss";
 @import "blocks/checklist.scss";
+@import "blocks/login.scss";
 @import "blocks/footer.scss";
 @import "blocks/copyright.scss";
