--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -13,6 +13,18 @@
   border: none;
   border-radius: 10px;
   cursor: pointer;
+
+  &--form {
+    min-width: 182px;
+    width: fit-content;
+    font-size: 18px;
+    box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.09);
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $basic-blue;
+  }
 }
 
 .button__icon {
