--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -8,6 +8,7 @@ $mobile-width-only: 767px;
 $basic-black: #000000;
 $basic-white: #ffffff;
 $basic-blue: #f2f8fb;
+$basic-blue-second: #9bd2ee;
 $basic-green: #008272;
 $basic-orange: #fdf4e6;
 
