добавил вывод email

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -14,6 +14,16 @@
 
 .header__auth {
   display: flex;
+  align-items: center;
+}
+
+.header__auth-text {
+  color: $basic-black;
+  margin-right: 5px;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 10px;
+  }
 }
 
 .header__auth-icon {
