--- a/source/sass/blocks/add-items.scss
+++ b/source/sass/blocks/add-items.scss
@@ -1,6 +1,6 @@
 .add-items {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   column-gap: 20px;
   row-gap: 20px;
 
