--- a/source/sass/blocks/filters.scss
+++ b/source/sass/blocks/filters.scss
@@ -1,6 +1,6 @@
 .filters__form {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   column-gap: 20px;
   row-gap: 22px;
 
