--- a/source/sass/blocks/add-items.scss
+++ b/source/sass/blocks/add-items.scss
@@ -8,7 +8,7 @@
     grid-template-columns: repeat(4, minmax(169px, 1fr));
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     grid-template-columns: repeat(3, minmax(165px, 1fr));
     column-gap: 30px;
   }
