--- a/source/sass/blocks/checklist.scss
+++ b/source/sass/blocks/checklist.scss
@@ -25,8 +25,8 @@
   }
 
   @media (min-width: $tablet-width) {
-    grid-template-columns: repeat(auto-fill, minmax(359px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 100px;
     column-gap: 20px;
     row-gap: 22px;
   }
@@ -168,4 +168,14 @@
   border: 1px solid $basic-black;
   border-radius: 6px;
   resize: none;
+
+  @media (min-width: $desktop-width) {
+    font-size: 16px;
+  }
+}
+
+.checklist__name {
+  @media (min-width: $desktop-width) {
+    font-size: 16px;
+  }
 }
