--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -6,11 +6,14 @@ $mobile-width-only: 767px;
 
 /* Color */
 $basic-black: #000000;
+$second-black: #323232;
 $basic-white: #ffffff;
 $basic-blue: #f2f8fb;
 $basic-blue-second: #9bd2ee;
 $basic-green: #008272;
+$second-green: #6bbd6e;
 $basic-orange: #fdf4e6;
+$basic-red: #f76666;
 
 $card-shadow: rgba(0, 0, 0, 0.09);
 $card-shadow-edit: rgba(0, 0, 0, 0.5);
