--- a/source/sass/blocks/login.scss
+++ b/source/sass/blocks/login.scss
@@ -95,7 +95,9 @@
 }
 
 .login__input-wrapper {
+  position: relative;
   display: flex;
+  flex-direction: column;
   margin-bottom: 47px;
 
   @media (min-width: $tablet-width) {
@@ -103,6 +105,19 @@
 
     &:last-of-type {
       margin-bottom: 43px;
+    }
+  }
+
+  .login__message {
+    position: absolute;
+    top: calc(100% + 3px);
+
+    &--succes {
+      color: $second-green;
+    }
+
+    &--error {
+      color: $basic-red;
     }
   }
 
@@ -123,6 +138,14 @@
   font-size: 20px;
   border: 0;
   border-bottom: 1px solid $basic-black;
+
+  &--succes {
+    border-bottom: 1px solid $second-green;
+  }
+
+  &--error {
+    border-bottom: 1px solid $basic-red;
+  }
 
   &::placeholder {
     font-weight: 400;
