смена расположения бокового меню

--- a/source/sass/blocks/add-items.scss
+++ b/source/sass/blocks/add-items.scss
@@ -9,7 +9,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-columns: repeat(3, minmax(165px, 1fr));
+    grid-template-columns: auto;
     column-gap: 30px;
   }
 }
