--- a/source/sass/blocks/filters.scss
+++ b/source/sass/blocks/filters.scss
@@ -10,7 +10,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    grid-template-columns: repeat(3, minmax(165px, 1fr));
+    grid-template-columns: auto;
     column-gap: 30px;
   }
 }
