--- a/source/sass/blocks/top.scss
+++ b/source/sass/blocks/top.scss
@@ -1,7 +1,7 @@
 .top {
   @media (min-width: $desktop-width) {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: min-content min-content;
     column-gap: 30px;
   }
 }
