--- a/source/sass/blocks/checklist.scss
+++ b/source/sass/blocks/checklist.scss
@@ -55,8 +55,8 @@
   padding-bottom: 10px;
   padding-right: 13px;
   background-color: $basic-orange;
-  border-radius: 10px;
-  box-shadow: 0px 2px 9px $card-shadow;
+  border-radius: 0px;
+  // box-shadow: 0px 2px 9px $card-shadow;
   transition: all 0.5s ease-in-out;
 
   &--complite {
