--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -8,6 +8,12 @@
     padding-bottom: 60px;
   }
 
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    column-gap: 40px;
+  }
+
   &--login {
     display: flex;
     justify-content: center;
