--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -11,7 +11,7 @@
   font-size: 14px;
   background-color: $basic-orange;
   border: none;
-  border-radius: 10px;
+  // border-radius: 10px;
   cursor: pointer;
 
   &--form {
