--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -21,6 +21,10 @@
     box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.09);
   }
 
+  @media (min-width: $desktop-width) {
+    font-size: 16px;
+  }
+
   &:hover,
   &:focus {
     background-color: $basic-blue;
