--- a/source/sass/blocks/filters.scss
+++ b/source/sass/blocks/filters.scss
@@ -1,15 +1,15 @@
 .filters__form {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
   column-gap: 20px;
   row-gap: 22px;
 
   @media (min-width: $tablet-width) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     row-gap: 20px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     grid-template-columns: auto;
     column-gap: 30px;
   }
