--- a/source/sass/blocks/select.scss
+++ b/source/sass/blocks/select.scss
@@ -5,6 +5,7 @@
 .select__input {
   position: relative;
   width: 100%;
+  height: 34px;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 11px;
