--- a/source/sass/blocks/select.scss
+++ b/source/sass/blocks/select.scss
@@ -1,3 +1,10 @@
+.select__title {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-weight: 400;
+  font-size: 14px;
+}
+
 .select__inner {
   position: relative;
 }
