--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Manrope";
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-display: swap;
   src: url("../fonts/Manrope-Regular.woff2") format("woff2"),
     url("../fonts/Manrope-Regular.woff") format("woff");
