разметил и стилизовал about

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,4 +20,5 @@
 @import "blocks/copyright.scss";
 @import "blocks/toast.scss";
 @import "blocks/select.scss";
+@import "blocks/about-popup.scss";
 @import "global/animate.scss";
