--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -10,6 +10,7 @@ $second-black: #323232;
 $basic-white: #ffffff;
 $basic-blue: #f2f8fb;
 $basic-blue-second: #9bd2ee;
+$basic-blue-third: #dbebf3;
 $basic-green: #008272;
 $second-green: #6bbd6e;
 $basic-orange: #fdf4e6;
