--- a/source/sass/blocks/about-popup.scss
+++ b/source/sass/blocks/about-popup.scss
@@ -12,6 +12,7 @@
   background-color: $basic-blue-third;
   box-shadow: 0px 2px 9px $card-shadow;
   transform: translate(-50%, -50%);
+  z-index: 1;
 
   @media (min-width: $desktop-width) {
     width: 50%;
