добавил кнопку вызова about

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -15,6 +15,21 @@
 .header__auth {
   display: flex;
   align-items: center;
+  margin-left: auto;
+  margin-right: 5px;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 10px;
+  }
+}
+
+.header__about {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .header__auth-text {
@@ -26,7 +41,7 @@
   }
 }
 
-.header__auth-icon {
+.header__icon {
   @media (min-width: $tablet-width) {
     width: 32.5px;
     height: 32.5px;
