--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -11,6 +11,7 @@ $basic-white: #ffffff;
 $basic-blue: #f2f8fb;
 $basic-blue-second: #9bd2ee;
 $basic-blue-third: #dbebf3;
+$basic-blue-fourth: #156af3;
 $basic-green: #008272;
 $second-green: #6bbd6e;
 $basic-orange: #fdf4e6;
