--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -8,10 +8,10 @@
   padding-right: 18px;
   padding-left: 18px;
   font-family: $font;
+  font-weight: 500;
   font-size: 14px;
   background-color: $basic-orange;
   border: none;
-  // border-radius: 10px;
   cursor: pointer;
 
   &--form {
@@ -22,12 +22,15 @@
   }
 
   @media (min-width: $desktop-width) {
+    justify-content: flex-start;
+    padding: 0;
     font-size: 16px;
-  }
+    background-color: transparent;
 
-  &:hover,
-  &:focus {
-    background-color: $basic-blue;
+    &:hover,
+    &:focus {
+      color: $basic-blue-fourth;
+    }
   }
 }
 
