--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -6,3 +6,12 @@
   src: url("../fonts/Manrope-Regular.woff2") format("woff2"),
     url("../fonts/Manrope-Regular.woff") format("woff");
 }
+
+@font-face {
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url("../fonts/Manrope-Medium.woff2") format("woff2"),
+    url("../fonts/Manrope-Medium.woff") format("woff");
+}
