--- a/source/sass/blocks/about-popup.scss
+++ b/source/sass/blocks/about-popup.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  display: flex;
+  display: none;
   flex-direction: column;
   width: 95%;
   padding-left: 15px;
@@ -13,6 +13,10 @@
   box-shadow: 0px 2px 9px $card-shadow;
   transform: translate(-50%, -50%);
   z-index: 1;
+
+  &--show {
+    display: flex;
+  }
 
   @media (min-width: $desktop-width) {
     width: 50%;
