--- a/source/sass/blocks/select.scss
+++ b/source/sass/blocks/select.scss
@@ -22,6 +22,8 @@
   font-size: 16px;
   border: 1px solid $basic-black;
   cursor: pointer;
+  text-overflow: ellipsis;
+  overflow: hidden;
 
   &::after {
     @include pseudo;
