--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -18,7 +18,7 @@
     min-width: 182px;
     width: fit-content;
     font-size: 18px;
-    box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.09);
+    box-shadow: 0 2px 9px rgba(0, 0, 0, 0.09);
   }
 
   @media (min-width: $desktop-width) {
