--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -15,13 +15,15 @@ $basic-blue-fourth: #156af3;
 $basic-green: #008272;
 $second-green: #6bbd6e;
 $basic-orange: #fdf4e6;
+$second-orange: #fbc269;
 $basic-red: #f76666;
 $basic-gray: #e4e4e4;
 $second-gray: #f5f5f5;
+$third-gray: #bbbbbb;
 
 $card-shadow: rgba(0, 0, 0, 0.09);
 $card-shadow-edit: rgba(0, 0, 0, 0.5);
-$select-shadow: 0px 0px 11px #dfdfdf;
+$select-shadow: 0 0 11px #dfdfdf;
 
 // Padding
 
