--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,7 +1,8 @@
 .footer {
   display: flex;
   align-items: center;
-  min-height: 64px;
   @include container;
+  padding-top: 7px;
+  padding-bottom: 7px;
   background-color: $basic-blue;
 }
